<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_nombre" />

        <EditText
            android:id="@+id/editText_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textView_nombre"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_tema" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_planta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_planta" />

            <RadioButton
                android:id="@+id/radioButton_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_animal" />

            <RadioButton
                android:id="@+id/radioButton_figura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_figura" />
        </RadioGroup>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_fecha" />

        <CalendarView
            android:id="@+id/calendarView_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_guardar"
            app:icon="@drawable/icon_save" />

        <Button
            android:id="@+id/button_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ver"
            app:icon="@drawable/icon_ver" />
    </TableRow>


</TableLayout>