<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verDatos">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_nombre" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_tema" />

        <ImageView
            android:id="@+id/imageView_tema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageView_tema"
            app:srcCompat="@drawable/icon_shape" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textView_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_fecha" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/button_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_regresar" />
    </TableRow>
</TableLayout>